--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 
     <script>
         // SPOTIFY API KONFIGURACJA - TUTAJ WPISZ SWOJE DANE!
-        const SPOTIFY_CLIENT_ID = 'TWÓJ_CLIENT_ID_TUTAJ';
-        const SPOTIFY_CLIENT_SECRET = 'TWÓJ_CLIENT_SECRET_TUTAJ';
+        const SPOTIFY_CLIENT_ID = '45dc779aa57c468a9c5150c58869f038';
+        const SPOTIFY_CLIENT_SECRET = 'c1ebbf47d54a40f1b612205d139686fd';
         let spotifyAccessToken = '';
 
         // BAZA PIOSENEK Z SPOTIFY ID - TYLKO SPRAWDZONE Z PREVIEW
