--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div class="popup-overlay" id="rankingPopup">
         <div class="popup success" style="max-width:500px">
             <div class="popup-icon">🏆</div>
-            <div class="popup-title">Rankingi (Suma Punktów)</div>
+            <div class="popup-title">Rankingi</div>
             <div class="ranking-tabs">
                 <div class="ranking-tab active" data-tab="daily">Dzienne</div>
                 <div class="ranking-tab" data-tab="weekly">Tygodniowe</div>
